tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier5IV-AAAAAAAAAAAAAAAAAAAABw==__IVFieldGenerator-6ENNFc4RS3u2sQFL5fnz1A==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 14848732441928659924,
  "prerequisites": [
    1890,
    1707
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Oh look, the latest and greatest field generator! I wonder what you'll end up using these for... maybe a Tree Growth Simulator? Maybe a new Matter Manipulator?",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§b§lIV Field Generator",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1890,
    1707
  ],
  "rewards": [],
  "tasks": []
}
