tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier5IV-AAAAAAAAAAAAAAAAAAAABw==__IVSuperconductor-AAAAAAAAAAAAAAAAAAAFgQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1409,
  "prerequisites": [
    1410,
    1522,
    1491,
    475,
    1005
  ],
  "properties": {
    "auto_claim": false,
    "desc": "How about lossless 8192 EU Wires? Vanadiumtriindinide is a superconductor wire and will transfer your energy without any loss.\n\nFrom now on, SCs are not optional, you need to make them to craft stuff.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§b§lIV Superconductors (8192 EU/t)",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1410,
    1522,
    1491,
    475,
    1005
  ],
  "rewards": [],
  "tasks": []
}
