tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier5IV-AAAAAAAAAAAAAAAAAAAABw==__IoTrip-AAAAAAAAAAAAAAAAAAAKig==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2698,
  "prerequisites": [
    1715
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Any ore veins not on Mercury are on this planet for this tier. The pyrolusite vein can have niobium extracted from it, and samarium can be acquired from mytryl and rubracium. Infused gold is also found here.\n\n[note]Like Venus, you can collect firestone from small ore here.[/note]",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§b§lIo Trip",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1715
  ],
  "rewards": [],
  "tasks": []
}
