tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier5IV-AAAAAAAAAAAAAAAAAAAABw==__Iridium-AAAAAAAAAAAAAAAAAAAJEQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2321,
  "prerequisites": [
    2319
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Add Calcium to Iridium Chloride to finally get pure Iridium.\n\nYou can run the Metallic Sludge through a centrifuge to get nickel and copper, while the Calcium Chloride needs to be solidified in a fluid solidifier before it can be electrolyzed for calcium and chlorine.\n\nBTW, this step is only EV, the only part that is, so you could do it earlier if you really wanted to.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§b§lIridium",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "CHAIN"
  },
  "required_prerequisites": [
    2319
  ],
  "rewards": [],
  "tasks": []
}
