tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier5IV-AAAAAAAAAAAAAAAAAAAABw==__MercuryTrip-AAAAAAAAAAAAAAAAAAAGtA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1716,
  "prerequisites": [
    1715
  ],
  "properties": {
    "auto_claim": false,
    "desc": "The only interesting ore on this planet is the deep iron from small ores. Grab a ton of it so you can get trinium out of it.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§b§lMercury Trip",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1715
  ],
  "rewards": [],
  "tasks": []
}
