tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier5IV-AAAAAAAAAAAAAAAAAAAABw==__Monazite-AAAAAAAAAAAAAAAAAAAL4w==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 3043,
  "prerequisites": [
    3041,
    213
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Welcome to lanthanide processing!\nIt'll be a fun journey, whether you like it or not :P\n\nFirst off get some monazite. This is only to get you started,\nas you're going to need a §oton§r to truly reap the rewards\nof this line.\n\nYou'll then need to combine it with nitric acid in the Digester multiblock,\nto get its mud form.\nYes, this is a §overy§r nitric acid hungry process!\n\n[note]To skip all of the Monazite quests hold a stack of each of these in your hand:\n\n- Zirconium Dust / Ingot\n- Hafnia Ingot\n- Cerium Dust / Ingot\n- Samarium Dust / Ingot[/note]",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§b§lMonazite",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    3041,
    213
  ],
  "rewards": [],
  "tasks": []
}
