tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier5IV-AAAAAAAAAAAAAAAAAAAABw==__MoreSamarium-u_-8t2IvRnydvmUx_qdYuA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 7074951042284607672,
  "prerequisites": [
    3087
  ],
  "properties": {
    "auto_claim": false,
    "desc": "If you have a stable Samarium resource acquisition, refining Samarium Ore should be the best way to get Samarium.\n\nAs the first step, dissolve some Samarium Ore Concentrate Dust or Crushed Samarium Ore (you probably don't have access to this option yet) in Nitric Acid in a Digester to get Muddy Samarium Rare Earth Solution. Thorium and Phosphate are retained in the form of a solid slag powder.\n\nThen transfer the muddy solution to a Dissolution Tank and continue to soak it in nitric acid. The undissolved powder is then meticulously filtered out, yielding some Cerium.\n\nThen dilute the result with water to adjust the pH.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§b§lMore Samarium!",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    3087
  ],
  "rewards": [],
  "tasks": []
}
