tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier5IV-AAAAAAAAAAAAAAAAAAAABw==__NaquadahDopedMon-AAAAAAAAAAAAAAAAAAAGhg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1670,
  "prerequisites": [
    1667
  ],
  "properties": {
    "auto_claim": false,
    "desc": "To make more advanced wafers, you need to make Naquadah Doped Monocrystalline Silicon first. The process takes 750 seconds and requires Silicon Solar Grade blocks, a Naquadah Ingot, and a Gallium Arsenide Crystal in the Electric Blast Furnace. You can make 64 wafers out of every boule.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§b§lNaquadah Doped Monocrystalline Silicon",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1667
  ],
  "rewards": [],
  "tasks": []
}
